--- a/app/src/main/res/layout/fragment_old.xml
+++ b/app/src/main/res/layout/fragment_old.xml
@@ -3,24 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StartFragment">
+    tools:context=".OldFragment">
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/start_fragment" />
+        android:layout_gravity="center"
+        android:text="@string/old_fragment" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/start_fragment" />
+        android:layout_gravity="center_horizontal"
+        android:text="@string/old_fragment" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|bottom"
-        android:text="@string/start_fragment" />
+
 
 </FrameLayout>
